# git-p4son

./: .doit.json  CHANGELOG.md  CLAUDE.md  README.md  clobber2.md  default-message.md  nice-output.md  pyproject.toml
.github/workflows/: publish.yml
completions/: _git-p4son  git-p4son.ps1
git_p4son/: __init__.py  __main__.py  alias.py  changelist.py  changelist_store.py  cli.py  common.py  complete.py  config.py  edit.py  git.py  hooks.py  init.py  lib.py  list_changes.py  log.py  new.py  perforce.py  review.py  state.py  sync.py  update.py
git_p4son/completions/: _git-p4son  git-p4son.bash  git-p4son.ps1
hooks/: pre-commit  pre-push
pergit/: changelist.py  cli.py  common.py  edit.py  list_changes.py  review.py  sync.py
scripts/: bump-version.py  format-changed.sh  setup-hooks.sh
temp/: clobber.md  merge.md  verbose-output.md
tests/: helpers.py  test_alias.py  test_changelist.py  test_changelist_store.py  test_cli.py  test_common.py  test_complete.py  test_config.py  test_edit.py  test_git.py  test_hooks.py  test_init.py  test_lib_changelist.py  test_lib_edit.py  test_lib_review.py  test_list_changes.py  test_log.py  test_new.py  test_perforce.py  test_review.py  test_state.py  test_sync.py
