[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pergit"
version = "1.0.0"
description = "Utility for keeping a Perforce workspace and local git repo in sync"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Andreas Andersson", email = "andreas@neoboid.com"}
]
keywords = ["perforce", "git", "version-control", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]

[project.scripts]
pergit = "pergit.cli:main"

[project.urls]
Homepage = "https://github.com/derwiath/pergit"
Repository = "https://github.com/derwiath/pergit"
Issues = "https://github.com/derwiath/pergit/issues"
